# RootUp

./: .gitignore  Cargo.toml  README.md  build.rs
resources/: README.md
src/: core.rs  main.rs
src/core/: app_tray.rs  paths.rs
src/core/app_tray/: tray_init.rs
ui/: MainWindow.slint
